--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
   "author": "Mohamed Al-Thibeh",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "jest": "^26.6.3",
+    "mongoose": "^5.10.15",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "supertest": "^6.0.1",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "webpack": "^5.6.0"
   }
 }
