--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "finnai",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
   "scripts": {
     "start": "node app",
     "dev": "nodemon app",
@@ -12,10 +11,7 @@
   "author": "Mohamed Al-Thibeh",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
@@ -26,7 +22,6 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "supertest": "^6.0.1",
-    "uuid": "^8.3.1",
-    "webpack": "^5.6.0"
+    "uuid": "^8.3.1"
   }
 }
